--- a/apps/playlist_app/templates/playlist_app/viewPlaylist.html
+++ b/apps/playlist_app/templates/playlist_app/viewPlaylist.html
@@ -47,5 +47,8 @@
                     {% endfor %}
                 </tbody>
             </table>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
